--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "12.x"
   },
   "scripts": {
-    "start" : "node app.js",
-    "heroku-postbuild" : "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "start": "node app.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Sneha Herle",
   "license": "ISC",
@@ -17,6 +17,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
+    "nodemailer": "^6.4.13",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.4"
   }
 }
